<resources>
    <string name="app_name">Cloudhouse</string>
    <string name="todo">TODO</string>
    <string name="main_menu">首页</string>
    <string name="solo_block">solo板</string>
    <string name="square">广场</string>
    <string name="me">我的</string>
    <string name="cloth">上衣</string>
    <string name="trousers">裤子</string>
    <string name="shoe">鞋子</string>
    <string name="wardrobe">衣柜</string>
    <string name="shoe_cabinet">鞋柜</string>
    <string name="bookrack">书架</string>
    <string name="medicine_chest">药箱</string>
    <string name="refrigerator">冰箱</string>
    <string name="welcome">Welcome</string>
    <string name="slogan">自律从此刻开始</string>
    <string name="admin">请输入账号/手机号</string>
    <string name="password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="agree_register">同意注册</string>
    <string name="input_code">请输入验证码</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="update">修改名称</string>
    <string name="album">相册</string>
    <string name="took_photo">拍照</string>
    <string name="solo_text">请选择模板开始创作吧~~~</string>
    <string name="create_card">创作模板</string>
</resources>