<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="30dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_solo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F3F8F1"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solo_text"
                android:textSize="14sp"
                android:textColor="#2a851e"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/rv_solo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cv_solo"
        android:layout_marginBottom="70dp">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

        </androidx.recyclerview.widget.RecyclerView>

    </ScrollView>

    <Button
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:text="@string/create_card"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/btn_selector" />

</RelativeLayout>