<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/container_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_menu"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/menu_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@mipmap/main"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_menu"
                android:textColor="#D2B8A6"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_solo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@mipmap/block"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solo_block"
                android:textColor="#939393"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@mipmap/add"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_square"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@mipmap/square"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/square"
                android:textColor="#939393"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@mipmap/me"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:textColor="#939393"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>